--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,23 @@
 ---
-# defaults file for hpe_mcp_pkgs
+hpe_repo_url: http://downloads.linux.hpe.com/SDR/repo/mcp
+
+hpe_apt_filename: "hpe"
+
+hpe_project_ver: current
+
+hpe_keys_base_url: https://downloads.linux.hpe.com/SDR/
+
+hpe_key_files:
+  - hpPublicKey2048_key1.pub
+  - hpePublicKey2048_key1.pub
+  - hpePublicKey2048_key2.pub
+
+hpe_keyring_file: /etc/apt/keyrings/hpe.gpg
+
+hpe_pkgs:
+  - amsd
+  # - hponcfg
+  # - ssacli
+  # - ssaducli
+  # - ssa
+  # - lldpd
