--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,20 +1,20 @@
 ---
-hpe_repo_url: http://downloads.linux.hpe.com/SDR/repo/mcp
+hpe_mcp_pkgs_repo_url: http://downloads.linux.hpe.com/SDR/repo/mcp
 
-hpe_apt_filename: "hpe"
+hpe_mcp_pkgs_apt_filename: hpe
 
-hpe_project_ver: current
+hpe_mcp_pkgs_project_ver: current
 
-hpe_keys_base_url: https://downloads.linux.hpe.com/SDR/
+hpe_mcp_pkgs_keys_base_url: https://downloads.linux.hpe.com/SDR/
 
-hpe_key_files:
+hpe_mcp_pkgs_key_files:
   - hpPublicKey2048_key1.pub
   - hpePublicKey2048_key1.pub
   - hpePublicKey2048_key2.pub
 
-hpe_keyring_file: /etc/apt/keyrings/hpe.gpg
+hpe_mcp_pkgs_keyring_file: /etc/apt/keyrings/hpe.gpg
 
-hpe_pkgs:
+hpe_mcp_pkg_to_install:
   - amsd
   # - hponcfg
   # - ssacli
