--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'simoncaron.pve_addons'
+          path: 'simoncaron.hpe_mcp_pkgs'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
